--- a/src/components/table/kanban.css
+++ b/src/components/table/kanban.css
@@ -1,12 +1,19 @@
 .react-kanban-column {
     background-color: #F8F8F8 !important; 
     border: 1px solid #E8E8E8!important;
-    min-height: 300px !important ;
-    overflow-y: auto ;  
+    display:flex;
+    height:auto !important;
+    /* overflow-y: auto ;   */
     overflow-x: hidden ; 
     margin: 27px !important;
     border-radius: 7px !important;  
   }
+  [data-rbd-droppable-id="board-droppable"] { 
+    display: flex;
+    }
+   
+    
+  
   .react-kanban-column::-webkit-scrollbar {
     width: 10px;
     height: 10px;
